<package>
  <name>hark_msgs</name>
  <version>0.1.0</version>
  <description>hark_msgs</description>
  <maintainer email="m.iihara@jp.honda-ri.com">m.iihara</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hark_msgs</url>

  <author>Keisuke Nakamura</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
